--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "downshift": "^6.1.7",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-day-picker": "^7.4.10",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.1"
